<resources>
    <string name="app_name">BTL-Nhom-7</string>
    <string name="name">Name</string>
    <string name="nameWarranty">Họ Tên</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_Warranty">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="vehicle_type">Vehicle_type</string>
    <string name="day">Day</string>
    <string name="date">Ngày bảo hành</string>
    <string name="time">Time</string>
    <string name="select_store">Chọn cửa hàng</string>
    <string name="Display_store">Cửa hàng</string>
    <string name="select_Motor">Chọn loại xe</string>
    <string name="Display_Motor">Loại xe</string>
    <string name="select">Lựa chọn dịch vụ</string>
    <string name="display_select">Loại dịch vụ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tongtien">Tổng giá tiền hàng: 0</string>

</resources>